--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Alex Araiza</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="preload" as="font" href="./fonts/RosaSans-Light.woff" type="font/woff">
     <link rel="preload" as="font" href="./fonts/RobotoMono-normal.woff2" type="font/woff2">
     <style>body { visibility: hidden; opacity: 0; }</style>
