Added sopars-de-duro to projects

--- a/index.html
+++ b/index.html
@@ -50,7 +50,23 @@
             </div>
           </div>
 
-          <div class="card reverse" id="infection-simulator">
+          <div class="card reverse" id="sopars-de-duro">
+            <div class="card-background"></div>
+
+            <div class="card-body">
+              <span class="card-title">Sopars de duro</span>
+              <div class="card-text">
+                <p>A static website for a cooking blog with over 180 recipes.</p>
+                <p>Filter recipes by category and tags and get new ideas for your next meal.</p>
+              </div>
+              <div class="btn-group">
+                <a href="https://github.com/alexaraiza/sopars-de-duro" class="btn code-btn">code</a>
+                <a href="https://alexaraiza.github.io/sopars-de-duro" class="btn demo-btn">demo</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="card" id="infection-simulator">
             <div class="card-background"></div>
 
             <div class="card-body">
@@ -66,7 +82,7 @@
             </div>
           </div>
 
-          <div class="card" id="fipsy-fpga-programmer">
+          <div class="card reverse" id="fipsy-fpga-programmer">
             <div class="card-background"></div>
 
             <div class="card-body">
