--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Alex Araiza</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="preload" as="font" href="./fonts/RosaSans-Light.woff" type="font/woff">
-    <link rel="preload" as="font" href="./fonts/RobotoMono-normal.woff2" type="font/woff2">
+    <link rel="preload" as="font" href="./fonts/Inter-Black.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="./fonts/Inter-Regular.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="./fonts/RobotoMono-normal.woff2" type="font/woff2" crossorigin="anonymous">
     <style>body { visibility: hidden; opacity: 0; }</style>
     <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
@@ -35,11 +36,10 @@
       <section id="projects">
         <div class="container">
 
-          <div class="card" id="price-tracker">
-            <div class="card-background"></div>
-
-            <div class="card-body">
-              <span class="card-title">Price tracker</span>
+          <div class="project">
+            <img class="project-img" src="img/pricetracker.svg" alt="Price tracker screenshot"></img>
+            <div class="card">
+              <div class="card-title">Price tracker</div>
               <div class="card-text">
                 <p>A web app to track the price of online items.</p>
                 <p>Add the URL of any item, and price tracker will let you know when it goes below a certain price.</p>
@@ -52,11 +52,10 @@
             </div>
           </div>
 
-          <div class="card reverse" id="sopars-de-duro">
-            <div class="card-background"></div>
-
-            <div class="card-body">
-              <span class="card-title">Sopars de duro</span>
+          <div class="project">
+            <img class="project-img" src="img/soparsdeduro.png" alt="Sopars de duro screenshot"></img>
+            <div class="card">
+              <div class="card-title">Sopars de duro</div>
               <div class="card-text">
                 <p>A static website for a cooking blog with over 180 recipes.</p>
                 <p>Filter recipes by category and tags and get new ideas for your next meal.</p>
@@ -68,11 +67,10 @@
             </div>
           </div>
 
-          <div class="card" id="infection-simulator">
-            <div class="card-background"></div>
-
-            <div class="card-body">
-              <span class="card-title">Infection simulator</span>
+          <div class="project">
+            <img class="project-img" src="img/infectionsimulator.svg" alt="Infection simulator logo"></img>
+            <div class="card">
+              <div class="card-title">Infection simulator</div>
               <div class="card-text">
                 <p>An app to simulate the spread of an infectious disease.</p>
                 <p>Put people in an enclosed space, build walls between them and watch the disease spread. Change the infection and death rates to see what happens.</p>
@@ -84,11 +82,10 @@
             </div>
           </div>
 
-          <div class="card reverse" id="fipsy-fpga-programmer">
-            <div class="card-background"></div>
-
-            <div class="card-body">
-              <span class="card-title">Fipsy FPGA programmer</span>
+          <div class="project">
+            <img class="project-img" src="img/fipsyfpgaprogrammer.png" alt="Fipsy FPGA programmer screenshot"></img>
+            <div class="card">
+              <div class="card-title">Fipsy FPGA programmer</div>
               <div class="card-text">
                 <p>A browser-based tool to program an FPGA via Wi-Fi.</p>
               </div>
