Changed project images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
 
           <div class="project">
-            <img class="project-img" src="img/soparsdeduro.png" alt="Sopars de duro screenshot"></img>
+            <img class="project-img" src="img/soparsdeduro.webp" alt="Sopars de duro screenshot"></img>
             <div class="card">
               <div class="card-title">Sopars de duro</div>
               <div class="card-text">
@@ -68,7 +68,7 @@
           </div>
 
           <div class="project">
-            <img class="project-img" src="img/infectionsimulator.svg" alt="Infection simulator logo"></img>
+            <img class="project-img" src="img/infectionsimulator.svg" alt="Infection simulator screenshot"></img>
             <div class="card">
               <div class="card-title">Infection simulator</div>
               <div class="card-text">
@@ -83,7 +83,7 @@
           </div>
 
           <div class="project">
-            <img class="project-img" src="img/fipsyfpgaprogrammer.png" alt="Fipsy FPGA programmer screenshot"></img>
+            <img class="project-img" src="img/fipsyfpgaprogrammer.webp" alt="Fipsy FPGA programmer screenshot"></img>
             <div class="card">
               <div class="card-title">Fipsy FPGA programmer</div>
               <div class="card-text">
